--- a/akelab/src/index.css
+++ b/akelab/src/index.css
@@ -56,7 +56,7 @@ html {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: center;
 }
 .figure-movie {
   width: 440px;
@@ -64,6 +64,7 @@ html {
   border: 1px solid black;
   border-radius: 20px;
   padding: 10px;
+  margin: 3px;
 }
 .figure-movie img {
   width: 200px;
